익명 전체 체팅 까지 구현