@@ -16,6 +16,7 @@ java {
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
@@ -26,6 +27,7 @@ dependencies {
     implementation 'org.springframework.security:spring-security-messaging'
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'io.github.juungmini0601:redis-messaging:1.0.1'
     // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // MySQL
@@ -50,5 +52,5 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
-    jvmArgs '-Xshare:off'
+    jvmArgs '-Xshare:off', '-XX:+EnableDynamicAgentLoading'
 }
